--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/Sak1012/lintoxic-fe.git
+[submodule "backend"]
+	path = backend
+	url = https://github.com/grittypuffy/lintoxic-be.git
